Bug 151008 - FILEOPEN PPTX text in shape has wrong anchor if text direction is tb-rl (eaVert)
Summary: FILEOPEN PPTX text in shape has wrong anchor if text direction is tb-rl (eaVert)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-16 20:34 UTC by Regina Henschel
Modified: 2022-09-19 08:43 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
all six kind of anchoring (39.30 KB, application/zip)
2022-09-16 20:34 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-09-16 20:34:49 UTC
Created attachment 182509 [details]
all six kind of anchoring

Open attached document. It has on the first slide the six cases of anchoring available in PowerPoint. The second slide contains an image of how it looks in PowerPoint. There is no wrap in the examples to force the text to overflow and so make the anchor position better visible.

The text direction tb-rl is not rendered by text rotation but is a native writing mode of the edit engine. Therefore anchor position needs special treatment on import and export.
Comment 1 Commit Notification 2022-09-19 08:39:40 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/439eaa8efdd8179f93f7aaf44d25ceced6ab1665

tdf#151008 adapt anchor for eaVert and mongolianVert

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.