tdf#151008 adapt anchor for eaVert and mongolianVert

MS Office and LibreOffice act different whether anchor positions are
rotated for vertical writing modes eaVert and mongolianVert. The patch
converts the position on import and export.

Currently shapes are not able to render mongolianVert. Nevertheless it
is included so that the text block has already the correct position
and the original position is restored on export.

LibreOffice has vertical anchor alignments BOTTOM, that would require
a third horizontal position in MS Office, which does not exist. It is
mapped to anchorCtr='1' instead. Such does not occur in pptx-LO-pptx
round-trip.

Change-Id: I1b0e42a39ce3aba12cdb271b2aa8023dacb9c53d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140118
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>